# neyrs-repo

./: .dockerignore  .env.example  .eslintrc.json  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: agent-benchmark.ts
core-parser/: Cargo.toml  README.md
core-parser/benches/: parser_benchmark.rs
core-parser/src/: lib.rs
docs/: api-reference.md  architecture.md  deployment.md  performance.md
examples/: advanced-routing.ts  basic-usage.ts  error-handling.ts
scripts/: build.sh  test.sh
src/: client.ts  index.ts
src/cache/: memory-cache.ts
src/core/: errors.ts  parser.ts  risk-assessment.ts  transaction-builder.ts
src/integrations/: commerce.ts  index.ts  jito.ts  jupiter.ts
src/monitoring/: metrics.ts
src/types/: commerce.ts  index.ts  intent.ts  transaction.ts  wallet.ts
src/utils/: formatting.ts  index.ts  logger.ts  validation.ts
tests/: cache.test.ts  parser.test.ts  risk-assessment.test.ts  transaction-builder.test.ts
